<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yeşil_mavi"
    android:textAlignment="viewEnd"
    tools:context=".DebtActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayoutDebt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_backVirtualCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ant_design_left_outlined" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ant_design_bell_twotone" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sayfa_borc_ode"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/btn_backVirtualCard"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_totalBalanceTitleDebt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:fontFamily="@font/roboto"
            android:text="@string/total_balance"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/txt_balance1VirtualCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/balance_1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_totalBalanceTitleDebt" />


        <TextView
            android:id="@+id/txt_balanceTLVirtualCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/balance_3"
            android:textColor="#FFFFFF"
            android:textSize="16sp"

            app:layout_constraintVertical_bias="0.75"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_cardNoTitleVirtualCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/card_no"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_balance1VirtualCard" />

        <TextView
            android:id="@+id/txt_cardNoVirtualCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/card_no_number"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_cardNoTitleVirtualCard"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_expirationDateVirtualCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:fontFamily="@font/roboto"
            android:text="@string/expiration_date"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_cardNoVirtualCard" />

        <ImageView
            android:id="@+id/img_masterCardVirtualCard"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:srcCompat="@drawable/ic_master_kart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middleLayoutDebt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayoutDebt">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/accounts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/payment_method"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Button
            android:id="@+id/btn_totalDebt"
            android:layout_width="110dp"
            android:layout_height="75dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/kahverengi"
            android:fontFamily="@font/roboto"
            android:text="@string/total_debt"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/btn_minimumDebt"
            android:layout_width="110dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/kahverengi"
            android:fontFamily="@font/roboto"
            android:text="@string/minimum_amount"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_totalDebt"
            app:layout_constraintStart_toEndOf="@+id/btn_totalDebt"
            app:layout_constraintTop_toTopOf="@+id/btn_totalDebt" />

        <Button
            android:id="@+id/btn_termDebt"
            android:layout_width="110dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/kahverengi"
            android:fontFamily="@font/roboto"
            android:text="@string/term_end"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_minimumDebt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_minimumDebt"
            app:layout_constraintTop_toTopOf="@+id/btn_minimumDebt" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/textview5"
            android:textColor="@color/kahverengi"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_minimumDebt" />

        <EditText
            android:id="@+id/input_limitVirtualCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_fontisto_tl"
            android:ems="6"
            android:hint="@string/value"

            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:backgroundTint="@color/vişne"
            android:drawableEnd="@drawable/ic_ant_design_right_circle_outlined"
            android:text="@string/onayla"
            app:layout_constraintStart_toEndOf="@+id/input_limitVirtualCard"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationDebt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@drawable/navigation_view_colored"
        app:itemRippleColor="@color/white"
        app:itemTextColor="@color/yeşil_mavi"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/card_bottom_nav_menu" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BB000000"
        android:clickable="true"
        android:gravity="center"

        android:visibility="visible">

        <ProgressBar
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>